@@ -2,7 +2,7 @@
 # CHANGES - change log of OTRS
 # Copyright (C) 2001-2012 OTRS AG, http://otrs.org/
 # --
-# $Id: CHANGES,v 1.2188 2012/02/23 14:12:49 mb Exp $
+# $Id: CHANGES,v 1.2189 2012/02/25 19:11:30 cr Exp $
 # --
 # This software comes with ABSOLUTELY NO WARRANTY. For details, see
 # the enclosed file COPYING for license information (AGPL). If you
@@ -10,6 +10,7 @@
 # --
 
 3.1.2 2012-03-??
+ - 2012-02-25 Fixed bug#8258 - DynamicField date value is reset to NULL.
  - 2012-02-23 Fixed bug#8214 - OTRS Init script on Red Hat / SUSE fails to check scheduler.
  - 2012-02-23 Fixed bug#8227 - LDAP user syncronisation doesn't work.
  - 2012-02-23 Fixed bug#8235 - Searching on DynamicFields, results are lost on next page.
